--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ body {
   font-size: 1.2rem;
   background: linear-gradient(90deg, #00aaff, #9b5cff);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
@@ -100,6 +101,7 @@ h1 {
   font-size: 2.5rem;
   background: linear-gradient(90deg, #00aaff, #9b5cff);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
@@ -141,6 +143,7 @@ h1 {
 .section h2, .about h2 {
   background: linear-gradient(90deg, #00aaff, #9b5cff);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
   margin-bottom: 20px;
 }
