--- a/partials/nav.html
+++ b/partials/nav.html
@@ -9,4 +9,6 @@
       <li><a href="installation.html">Installation</a></li>
       <li><a href="usage.html">Usage</a></li>
       <li><a href="examples.html">Examples</a></li>
+      <li><a href="commands.html">Commands</a></li>
+
     </ul>
