added argo-cd integration

--- a/partials/nav.html
+++ b/partials/nav.html
@@ -11,5 +11,6 @@
       <li><a href="examples.html">Examples</a></li>
       <li><a href="commands.html">Commands</a></li>
       <li><a href="blocks.html">Blocks</a></li>
+      <li><a href="argocd.html">ArgoCD Integration</a></li>
 
     </ul>
